<resources>
    <string name="app_name">GENIUS</string>
    <string name="start_game">START GAME</string>
    <string name="new_game">NEW GAME</string>
    <string name="restart">RESTART</string>
    <string name="save">SAVE</string>
    <string name="load_game">LOAD GAME</string>
    <string name="records">RECORDS</string>
    <string name="quit">QUIT</string>
    <string name="easy">EASY</string>
    <string name="normal" translatable="false">NORMAL</string>
    <string name="hardcore">HARDCORE</string>
    <string name="free">FREE</string>
    <string name="gg" translatable="false">GG</string>
    <string name="mainmenu">MAIN MENU</string>
    <string name="awesome">AWESOME</string>
    <string name="errou" translatable="false">ERROOUUUUU</string>
    <string name="game_over">GAME OVER</string>
    <string name="youmade">Your biggest sequence was</string>
    <string name="buttons">buttons</string>
    <string name="norecords">No records yet.</string>
    <string name="points">Points: </string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="metric">th</string>
    <string name="newrecord">New Record!!</string>
    <string name="congratulations">Congratulations :)</string>
    <string name="name">Name</string>
    <string name="skip">Skip</string>
    <string name="erroname">Name is required.</string>
    <string name="saved">Record saved.</string>
</resources>
